<resources>
    <string name="app_name">福喵管家</string>
    <string name="home">首页</string>
    <string name="merchant">商户</string>
    <string name="data">数据</string>
    <string name="me">我的</string>
    <string name="quit_app_tips">再按一次退出程序</string>
    <string name="personal_center">个人中心</string>
    <string name="modify_psd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="download">下载福喵APP</string>
    <string name="collect_merchant_data">商户进件</string>
    <string name="manager_merchant_review">商户审核管理</string>
    <string name="manager_merchant">商户管理</string>
    <string name="small_merchant_incoming">小微商户进件</string>
    <string name="normal_merchant_incoming">普通商户进件</string>
    <string name="collect_draft">进件草稿</string>
    <string name="user_account_hint">请输入账号</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="account_password_empty_tips">账号或密码不能为空</string>
    <string name="login_out">是否退出账号？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="merchant_register">商户注册</string>
    <string name="login">登录</string>
    <string name="next_step">下一步</string>
    <string name="last_step">上一步</string>
    <string name="must_fill">(必填)</string>
    <string name="bank_phone">银行卡照片</string>
    <string name="card_front">店主身份证正面</string>
    <string name="card_reverse">店主身份证反面</string>
    <string name="bank_front">店主银行卡正面</string>
    <string name="bank_reverse">店主银行卡反面</string>
    <string name="company_name">江西福喵科技有限公司</string>
    <string name="old_psd_hint">请输入原登录密码</string>
    <string name="new_psd_hint">请输入新密码</string>
    <string name="basic_info">基本信息</string>
    <string name="merchant_info">商户所属信息</string>
    <string name="merchant_code">商户编号:</string>
    <string name="settlement_info">结算信息</string>
    <string name="more_info">更多信息</string>
    <string name="merchant_name">商户名称:</string>
    <string name="salesman">业务员:</string>
    <string name="organization">所属机构:</string>
    <string name="creation_time">创建时间:</string>
    <string name="reg_name">注册名称:</string>
    <string name="merchant_status">商户状态:</string>
    <string name="merchant_type">商户类型:</string>
    <string name="business_address">经营地址:</string>
    <string name="merchant_category">商户类别:</string>
    <string name="license_period">营业执照期限:</string>
    <string name="legal_person_name">法人姓名:</string>
    <string name="legal_person_phone">法人手机号:</string>
    <string name="settlement_type">结算类型:</string>
    <string name="settlement_name">结算人姓名:</string>
    <string name="settlement_account">结算账号:</string>
    <string name="no_working_settlement">非工作日结算:</string>
    <string name="about_fumiao">关于福喵管家</string>
    <string name="current_version">当前版本:</string>
    <string name="device_unbind_authorization">终端解绑操作。此操作，需业务员验证码授权，业务员授权码获取5分钟有效。</string>
    <string name="store_add_authorization">新增门店操作，此操作你需要商户验证码授权，商户授权码获取5分钟内有效。</string>
    <string name="data_statistics">数据统计</string>
    <string name="merchant_list">商户列表</string>
    <string name="store_info">门店信息</string>
    <string name="store_name">门店名:</string>
    <string name="store_number">门店号:</string>
    <string name="store_status">门店状态:</string>
    <string name="create_time">创建时间:</string>
    <string name="contacts">联系人:</string>
    <string name="telephone_number">联系电话:</string>
    <string name="operating_area">经营地区:</string>
    <string name="operating_addr">经营地址:</string>
    <string name="device_list">终端列表</string>
    <string name="store_list">门店列表</string>
    <string name="activity_list">活动列表</string>
</resources>
