<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:divider="@drawable/line"
    android:showDividers="middle|end"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/font_16sp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/tv_msg_bg"
        android:text="@string/basic_info"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/merchant_name"/>
        <TextView
            android:id="@+id/tv_merchant_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/merchant_code"/>
        <TextView
            android:id="@+id/tv_merchant_number"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/font_16sp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/tv_msg_bg"
        android:text="@string/store_info"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/store_name"/>
        <TextView
            android:id="@+id/tv_store_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/store_number"/>
        <TextView
            android:id="@+id/tv_store_number"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/store_status"/>
        <TextView
            android:id="@+id/tv_store_status"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/create_time"/>
        <TextView
            android:id="@+id/tv_create_time"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/contacts"/>
        <TextView
            android:id="@+id/tv_contacts"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/telephone_number"/>
        <TextView
            android:id="@+id/tv_telephone_number"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/operating_area"/>
        <TextView
            android:id="@+id/tv_store_area"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/operating_addr"/>
        <TextView
            android:id="@+id/tv_store_addr"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:gravity="center_vertical"
            android:text="@string/salesman"/>
        <TextView
            android:id="@+id/tv_salesman"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_content"
            android:textColor="@color/font_des"
            android:gravity="center_vertical" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/font_16sp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/tv_msg_bg"
        android:text="@string/more_info"/>
    <RelativeLayout
        android:id="@+id/rl_device_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/font_contents"
            android:text="@string/device_list" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>
</LinearLayout>