<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:divider="@drawable/line"
    android:showDividers="beginning|end"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_reject_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/app_bg"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/tips_bg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/font_content"
            android:textColor="#F4001F"
            android:text="上传的信息有误或信息不正确，请重新填写"/>
    </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
    <LinearLayout
        android:id="@+id/lin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/card_front"
                android:layout_width="124dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_card_front" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/card_front"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/must_fill"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/card_reverse"
                android:layout_width="124dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_card_reverse" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/card_reverse"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/must_fill"/>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="49dp"
        android:layout_height="1dp"
        android:background="@color/line" />
     <com.fumiao.core.widget.KeyEditText
         android:id="@+id/card_name"
         style="@style/MeItem"
         app:hint="请输入身份证姓名"
         app:key="姓名:"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/line" />
     <com.fumiao.core.widget.KeyEditText
         android:id="@+id/id_card"
         style="@style/MeItem"
         app:hint="请输入证件号码"
         app:key="身份证号:"/>
 </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:paddingTop="20dp"
        android:textColor="@color/font_title"
        android:textSize="@dimen/font_17sp"
        android:text="@string/bank_phone"/>
    <LinearLayout
        android:id="@+id/lin_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/bank_front"
                android:layout_width="124dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_bank_front" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/bank_front"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/must_fill"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/bank_reverse"
                android:layout_width="124dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_bank_reverse" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/bank_reverse"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <com.fumiao.core.widget.KeyEditText
        android:id="@+id/manager_bank_id"
        style="@style/MeItem"
        app:hint="请输入店主卡号"
        app:is_number="true"
        app:key="店主卡号:"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
    <com.fumiao.core.widget.ItemArrowLayout
        android:id="@+id/bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MeItem"
        app:text="开户行:"
        app:des="选择银行"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
    <com.fumiao.core.widget.ItemArrowLayout
        android:id="@+id/bank_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MeItem"
        app:text="开户行城市:"
        app:des="选择开户行城市"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
    <com.fumiao.core.widget.ItemArrowLayout
        android:id="@+id/bank_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MeItem"
        app:text="开户支行:"
        app:des="选择开户支行"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="7dp"
        android:padding="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_last_step"
            android:layout_width="130dp"
            android:layout_height="43dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/last_step"
            android:background="@drawable/btn_last_step"
            android:textColor="@color/white"
            android:textSize="@dimen/font_19sp"/>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="130dp"
            android:layout_height="43dp"
            android:background="@drawable/btn_clickable_bg"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/white"
            android:layout_marginLeft="28dp"
            android:textSize="@dimen/font_19sp"
            android:text="确认提交"/>
    </LinearLayout>
</LinearLayout>