<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:divider="@drawable/line"
    android:showDividers="middle|beginning"
    android:orientation="vertical">

    <LinearLayout
        style="@style/ContentStyle"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/change_pwd_text"
                android:text="登录账号:"/>
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/text_color"
                android:text="@string/company_name"/>
    </LinearLayout>

    <LinearLayout
        style="@style/ContentStyle"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/change_pwd_text"
            android:text="原密码:"/>
        <EditText
            android:id="@+id/ed_old_psd"
            android:textColor="@color/font_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="27dp"
            android:lines="1"
            android:hint="@string/old_psd_hint"
            android:layout_weight="1"
            android:background="@null"
            android:paddingLeft="10dp"
            android:textSize="@dimen/font_content" />

        <ImageView
            android:id="@+id/password_status"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_hide_pd"/>
    </LinearLayout>

    <LinearLayout
        style="@style/ContentStyle"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/change_pwd_text"
            android:layout_marginLeft="23dp"
            android:text="新密码:"/>
        <EditText
            android:id="@+id/ed_new_psd"
            android:textColor="@color/font_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:layout_marginLeft="27dp"
            android:hint="@string/new_psd_hint"
            android:layout_weight="1"
            android:background="@null"
            android:paddingLeft="10dp"
            android:textSize="@dimen/font_content" />

        <ImageView
            android:id="@+id/new_password_status"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_hide_pd"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/font_17sp"
        android:background="@drawable/btn_unclickable_bg"
        android:textColor="@color/colorPrimaryDark"
        android:text="确认修改"/>




</LinearLayout>